updated combobox examples

--- a/examples/combobox/aria1.0pattern/combobox-autocomplete-none.html
+++ b/examples/combobox/aria1.0pattern/combobox-autocomplete-none.html
@@ -209,7 +209,7 @@
         <tr>
           <td>
           </td>
-          <th scope="row"><code>aria-autocomplete=<q>list</q></code></th>
+          <th scope="row"><code>aria-autocomplete=<q>none</q></code></th>
           <td><code>input[type="text"]</code></td>
           <td>
             <ul>
