--- a/examples/combobox/aria1.0pattern/combobox-autocomplete-both.html
+++ b/examples/combobox/aria1.0pattern/combobox-autocomplete-both.html
@@ -15,7 +15,7 @@
 <link rel="stylesheet" href="css/combobox-1.0.css">
 <link rel="stylesheet" href="css/listbox.css">
 
-<script type="text/javascript" src="js/combobox-1.0-listbox.js"></script>
+<script type="text/javascript" src="js/combobox-1.0-list.js"></script>
 <script type="text/javascript" src="js/listbox.js"></script>
 <script type="text/javascript" src="js/listboxOption.js"></script>
 
@@ -44,7 +44,7 @@
     <h2 id="ex_label">Example</h2>
     <div role="separator" id="ex_start_sep" aria-labelledby="ex_start_sep ex_label" aria-label="Start of"></div>
     <div id="ex1">
-      <div class="combobox-listbox">
+      <div class="combobox-list">
         <label for="cb1-input">State</label>
 
         <div class="group">
@@ -400,7 +400,7 @@
       </li>
       <li>
         Javascript:
-        <a href="js/combobox-1.0-listbox.js" type="text/javascript">combobox-1.0-listbox.js</a>
+        <a href="js/combobox-1.0-list.js" type="text/javascript">combobox-1.0-list.js</a>
       </li>
       <li>
         Javascript:
