--- a/examples/combobox/aria1.0pattern/combobox-autocomplete-inline.html
+++ b/examples/combobox/aria1.0pattern/combobox-autocomplete-inline.html
@@ -33,8 +33,18 @@
   </p>
   <p>Similar examples include: </p>
   <ul>
-    <li><a href="combobox-autocomplete-list.html">Combobox With Autocompete List</a>: summarize what this related example demonstrates.</li>
-    <li><a href="combobox-autocomplete-both.html">Combobox With Both List and Inline Autocompletion</a>: summarize what this related example demonstrates.</li>
+    <li>
+      <a href="combobox-autocomplete-none.html">Combobox Without Autocomplete</a>
+      : example demonstrates the behavior associated with <code>aria-autocomplete=none</code>.
+    </li>
+    <li>
+      <a href="combobox-autocomplete-list.html">Combobox With an List Autocomplete</a>
+      : example demonstrates the behavior associated with <code>aria-autocomplete=list</code>.
+    </li>
+    <li>
+      <a href="combobox-autocomplete-both.html">Combobox With Both List and Inline Autocompletion</a>
+      : example demonstrates the behavior associated with <code>aria-autocomplete=both</code>.
+    </li>
   </ul>
 
   <section>
