--- a/examples/combobox/aria1.0pattern/combobox-autocomplete-list.html
+++ b/examples/combobox/aria1.0pattern/combobox-autocomplete-list.html
@@ -36,8 +36,18 @@
   </p>
   <p>Similar examples include: </p>
   <ul>
-    <li><a href="combobox-autocomplete-inline.html">Combobox With Inline Autocomplete</a>: summarize what this related example demonstrates.</li>
-    <li><a href="combobox-autocomplete-both.html">Combobox With Both List and Inline Autocompletion</a>: summarize what this related example demonstrates.</li>
+    <li>
+      <a href="combobox-autocomplete-inline.html">Combobox With Inline Autocomplete</a>
+      : example demonstrates the behavior associated with <code>aria-autocomplete=inline</code>.
+    </li>
+    <li>
+      <a href="combobox-autocomplete-none.html">Combobox Without Autocomplete</a>
+      : example demonstrates the behavior associated with <code>aria-autocomplete=none</code>.
+    </li>
+    <li>
+      <a href="combobox-autocomplete-both.html">Combobox With Both List and Inline Autocompletion</a>
+      : example demonstrates the behavior associated with <code>aria-autocomplete=both</code>.
+    </li>
   </ul>
 
   <section>
