updated descriptions of the combobox examples

--- a/examples/combobox/aria1.0pattern/combobox-autocomplete-list.html
+++ b/examples/combobox/aria1.0pattern/combobox-autocomplete-list.html
@@ -24,14 +24,14 @@
   <main>
   <h1>Example of Legacy ARIA 1.0 Combobox With an Autocomplete List</h1>
   <p>
-    <strong>NOTE:</strong> This page is work in progress; it is not ready for review.
+    <strong>NOTE:</strong> This page is ready to start reviewing.
     This work is tracked by <a href="https://github.com/w3c/aria-practices/issues/99">issue 99</a>.
   </p>
   <p>
     The below example section demonstrates a <code>combobox</code> that implements the
     <a href="../../#combobox">ARIA 1.0 design pattern for combobox.</a>
     This example demonstrates a combobox that provides a list of options to the user.
-    The options available in the listbox is filtered based on user input into the textbox.
+    The options available in the listbox are filtered based on user input into the textbox.
     The user can select an option from the list to set the value of the textbox.
   </p>
   <p>Similar examples include: </p>
