--- a/examples/combobox/aria1.0pattern/combobox-autocomplete-none.html
+++ b/examples/combobox/aria1.0pattern/combobox-autocomplete-none.html
@@ -24,15 +24,16 @@
   <main>
   <h1>Example of Legacy ARIA 1.0 Combobox Without Autocomplete</h1>
   <p>
-    <strong>NOTE:</strong> This page is work in progress; it is not ready for review.
+    <strong>NOTE:</strong> This page is ready to start reviewing.
     This work is tracked by <a href="https://github.com/w3c/aria-practices/issues/99">issue 99</a>.
   </p>
   <p>
     The below example section demonstrates a <code>combobox</code> that implements the
     <a href="../../#combobox">ARIA 1.0 design pattern for combobox.</a>
     This example demonstrates a combobox that provides a list of options to the user.
-    The options available in the listbox are a static list of options and do <strong>not</strong> change based
-    on user input into the textbox.
+    The options available in the listbox are fixed and do <strong>not</strong> change based
+    on user input into the textbox.  Tis pattern is common for providing options based on
+    previous input into the textbox, for example a user name, address or phone number.
     The user can select an option from the list to set the value of the textbox.
   </p>
   <p>Similar examples include: </p>
