--- a/examples/combobox/aria1.0pattern/combobox-autocomplete-both.html
+++ b/examples/combobox/aria1.0pattern/combobox-autocomplete-both.html
@@ -24,15 +24,17 @@
   <main>
   <h1>Example of Legacy ARIA 1.0 Combobox With Both List and Inline Autocompletion</h1>
   <p>
-    <strong>NOTE:</strong> This page is work in progress; it is not ready for review.
+    <strong>NOTE:</strong> This page is ready to start reviewing.
     This work is tracked by <a href="https://github.com/w3c/aria-practices/issues/99">issue 99</a>.
   </p>
   <p>
-    <!-- Provide an overview of the example where the first sentence provides a link to the section of aria-practices.html that describes the pattern this example implements. -->
-    Replace this paragraph with an overview of the example that is something like the following. The
-    below example section demonstrates a simple checkbox that implements the
-    <a href="../../#combobox">design pattern for checkbox.</a>
-    This example uses ... summarize salient techniques )
+    The below example section demonstrates a <code>combobox</code> that implements the
+    <a href="../../#combobox">ARIA 1.0 design pattern for combobox.</a>
+    This example demonstrates a combobox that provides both a list and an inline of
+    autocomplete options to the user.
+    The options available in the listbox are filtered based on user input into the textbox.
+    The user can select an option from the list to set the value of the textbox or use the
+    enter key to select the autocompelete option in the textbox.
   </p>
   <p>Similar examples include: </p>
   <ul>
