--- a/examples/combobox/aria1.0pattern/combobox-autocomplete-none.html
+++ b/examples/combobox/aria1.0pattern/combobox-autocomplete-none.html
@@ -214,7 +214,7 @@
           <td><!--  Leave this cell blank in rows where a role is being described. --></td>
           <td><code>input[type="text"]</code></td>
           <td>
-            Identifies the textbx as a combobox option.
+            Identifies the <code>input[type=<q>text</q>] as a combobox option.
           </td>
         </tr>
         <tr>
@@ -223,11 +223,7 @@
           <th scope="row"><code>aria-autocomplete=<q>none</q></code></th>
           <td><code>input[type="text"]</code></td>
           <td>
-            <ul>
-              <li>explanation of usage, purpose, benefit, and/or guidance relevant to this implementation.</li>
-              <li>If making multiple statements, use list for brevity and clarity</li>
-              <li>Do not make a single item list.</li>
-            </ul>
+            The value of <code>none</code>code> identifies that the list of options is static.
           </td>
         </tr>
         <tr>
@@ -236,11 +232,7 @@
           <th scope="row"><code>aria-haspopup=<q>true</q></code></th>
           <td><code>input[type="text"]</code></td>
           <td>
-            <ul>
-              <li>explanation of usage, purpose, benefit, and/or guidance relevant to this implementation.</li>
-              <li>If making multiple statements, use list for brevity and clarity</li>
-              <li>Do not make a single item list.</li>
-            </ul>
+            Identifies the <code>combobox</code> as having a popup list of options for the value of the textbox.
           </td>
         </tr>
         <tr>
@@ -249,11 +241,7 @@
           <th scope="row"><code>aria-owns=<q>#IDREF</q></code></th>
           <td><code>input[type="text"]</code></td>
           <td>
-            <ul>
-              <li>explanation of usage, purpose, benefit, and/or guidance relevant to this implementation.</li>
-              <li>If making multiple statements, use list for brevity and clarity</li>
-              <li>Do not make a single item list.</li>
-            </ul>
+            Identifies the <code>listbox</code> that is controlled by the combobox.
           </td>
         </tr>
         <tr>
@@ -262,11 +250,7 @@
           <th scope="row"><code>aria-expanded=<q>false</q></code></th>
           <td><code>input[type="text"]</code></td>
           <td>
-            <ul>
-              <li>explanation of usage, purpose, benefit, and/or guidance relevant to this implementation.</li>
-              <li>If making multiple statements, use list for brevity and clarity</li>
-              <li>Do not make a single item list.</li>
-            </ul>
+            Idenitifies the <code>listbox</code> as closed (e.g. hidden from the user).
           </td>
         </tr>
         <tr>
@@ -275,13 +259,10 @@
           <th scope="row"><code>aria-expanded=<q>true</q></code></th>
           <td><code>input[type="text"]</code></td>
           <td>
-            <ul>
-              <li>explanation of usage, purpose, benefit, and/or guidance relevant to this implementation.</li>
-              <li>If making multiple statements, use list for brevity and clarity</li>
-              <li>Do not make a single item list.</li>
-            </ul>
+            Idenitifies the <code>listbox</code> as open (e.g. visible to the user).
           </td>
-        </tr>      </tbody>
+        </tr>
+      </tbody>
     </table>
 
 
