--- a/examples/combobox/aria1.0pattern/combobox-autocomplete-both.html
+++ b/examples/combobox/aria1.0pattern/combobox-autocomplete-both.html
@@ -259,7 +259,7 @@
           <td><!--  Leave this cell blank in rows where a role is being described. --></td>
           <td><code>input[type="text"]</code></td>
           <td>
-            Identifies the textbx as a combobox option.
+            Identifies the <code>input[type=<q>text</q>] as a combobox option.
           </td>
         </tr>
         <tr>
@@ -268,11 +268,7 @@
           <th scope="row"><code>aria-autocomplete=<q>both</q></code></th>
           <td><code>input[type="text"]</code></td>
           <td>
-            <ul>
-              <li>explanation of usage, purpose, benefit, and/or guidance relevant to this implementation.</li>
-              <li>If making multiple statements, use list for brevity and clarity</li>
-              <li>Do not make a single item list.</li>
-            </ul>
+            The value of <code>both</code>code> identifies the behavior of the combox includes both a list of options to choose from and an option in the <code>input[type="<q>text</q>]</code>.
           </td>
         </tr>
         <tr>
@@ -281,11 +277,7 @@
           <th scope="row"><code>aria-haspopup=<q>true</q></code></th>
           <td><code>input[type="text"]</code></td>
           <td>
-            <ul>
-              <li>explanation of usage, purpose, benefit, and/or guidance relevant to this implementation.</li>
-              <li>If making multiple statements, use list for brevity and clarity</li>
-              <li>Do not make a single item list.</li>
-            </ul>
+            Identifies the <code>combobox</code> as having a popup list of options for the value of the textbox.
           </td>
         </tr>
         <tr>
@@ -294,11 +286,7 @@
           <th scope="row"><code>aria-owns=<q>#IDREF</q></code></th>
           <td><code>input[type="text"]</code></td>
           <td>
-            <ul>
-              <li>explanation of usage, purpose, benefit, and/or guidance relevant to this implementation.</li>
-              <li>If making multiple statements, use list for brevity and clarity</li>
-              <li>Do not make a single item list.</li>
-            </ul>
+            Identifies the <code>listbox</code> that is controlled by the combobox.
           </td>
         </tr>
         <tr>
@@ -307,11 +295,7 @@
           <th scope="row"><code>aria-expanded=<q>false</q></code></th>
           <td><code>input[type="text"]</code></td>
           <td>
-            <ul>
-              <li>explanation of usage, purpose, benefit, and/or guidance relevant to this implementation.</li>
-              <li>If making multiple statements, use list for brevity and clarity</li>
-              <li>Do not make a single item list.</li>
-            </ul>
+            Idenitifies the <code>listbox</code> as closed (e.g. hidden from the user).
           </td>
         </tr>
         <tr>
@@ -320,13 +304,10 @@
           <th scope="row"><code>aria-expanded=<q>true</q></code></th>
           <td><code>input[type="text"]</code></td>
           <td>
-            <ul>
-              <li>explanation of usage, purpose, benefit, and/or guidance relevant to this implementation.</li>
-              <li>If making multiple statements, use list for brevity and clarity</li>
-              <li>Do not make a single item list.</li>
-            </ul>
+            Idenitifies the <code>listbox</code> as open (e.g. visible to the user).
           </td>
-        </tr>      </tbody>
+        </tr>
+      </tbody>
     </table>
 
 
