removed listbox references in source code

--- a/examples/combobox/aria1.0pattern/combobox-autocomplete-inline.html
+++ b/examples/combobox/aria1.0pattern/combobox-autocomplete-inline.html
@@ -204,20 +204,8 @@
         <a href="css/combobox-1.0.css" type="tex/css">combobox-10.css</a>
       </li>
       <li>
-        CSS:
-        <a href="css/listbox.css" type="tex/css">listbox.css</a>
-      </li>
-      <li>
         Javascript:
-        <a href="js/combobox-1.0.js" type="text/javascript">combobox-1.0.js</a>
-      </li>
-      <li>
-        Javascript:
-        <a href="js/listbox.js" type="text/javascript">listbox.js</a>
-      </li>
-      <li>
-        Javascript:
-        <a href="js/listboxOption.js" type="text/javascript">listboxOption.js</a>
+        <a href="js/combobox-1.0-inline.js" type="text/javascript">combobox-1.0-inline.js</a>
       </li>
     </ul>
   </section>
