Read Me First section: Change Example Button Code
Made change to button label suggested by @devarshipant in issue #482.

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -97,7 +97,7 @@
       <h4>Principal 1: A role is a promise</h4>
       <p>This code:</p>
       <pre><code>
-        &lt;div role=&quot;button&quot;&gt;Press Me&lt;/div&gt;
+        &lt;div role=&quot;button&quot;&gt;Place Order&lt;/div&gt;
           </code> </pre>
       <p>
         Is a promise that the author of that <code>&lt;div&gt;</code> has also incorporated JavaScript that provides the keyboard interactions expected for a button.
