Disclosure Pattern: Editorial Revision of Description
For issue #9, made minor editorial revisions to the description text.

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -1054,7 +1054,11 @@
 
     <section class="widget" id="disclosure">
       <h3>Disclosure (Show/Hide)</h3>
-     <p>A disclosure button is a <a href="#button">button</a> that hides or shows content on a page. It is often styled as a typical push button with a right pointing arrow or triangle to hint that activating the button will display the content.  When the content is made visible the arrow or triangle typically changes to point down.</p>
+      <p>
+        A disclosure is a <a href="#button">button</a> that controls visibility of a section of content. 
+        When the controlled conted is hidden, it is often styled as a typical push button with a right pointing arrow or triangle to hint that activating the button will display additional content.  
+        When the content is visible, the arrow or triangle typically points down.
+      </p>
 
       <section class="notoc">
         <h4>Examples</h4>
