updated grid properties

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -3881,6 +3881,56 @@
       or <code>grid</code> using the <code>colcount</code>, <code>rowcount</code>, <code>colindex</code> and <code>rowindex</code> attributes within the context of a <code>table</code> row.
     </p>
 
+    <section id="gridAndTableProperties_counts">
+      <h3>
+        Defining dimensions using <code>aria-colcount</code> and <code>aria-rowcount</code>
+      </h3>
+      <p>
+      </p>
+    </section>
+
+    <section id="gridAndTableProperties_unkown_counts">
+      <h3>
+        <code>aria-colcount</code> and <code>aria-rowcount</code> values when dimensions are unknown
+      </h3>
+      <p>
+      </p>
+    </section>
+
+    <section id="gridAndTableProperties_index">
+      <h3>
+        Defining cell position using <code>aria-colindex</code> and <code>aria-rowindex</code>
+      </h3>
+      <p>
+      </p>
+      <section>
+        <h4>When cell numbering is continous</h4>
+        <p>
+        </p>
+      </section>
+      <section>
+        <h4>When cell numbering is non-contiguous</h4>
+        <p>
+        </p>
+      </section>
+    </section>
+
+    <section id="gridAndTableProperties_spans">
+      <h3>
+        Defining cell spans using <code>aria-colspan</code> and <code>aria-rowspan</code>
+      </h3>
+      <p>
+      </p>
+    </section>
+
+    <section id="gridAndTableProperties_sort">
+      <h3>
+        Identifying column sorting using <code>aria-sort</code>
+      </h3>
+      <p>
+      </p>
+    </section>
+
     <p>
       For example, consider a 1000 row by 100 column grid built using an HTML <code>table</code> element, but only 10 rows and 10 columns of the grid are rendered at a time.
     </p>
